frontend/test/should_fail/matchclass_connection.grg
match class shared
{
	n:Node -e:Edge-> m:Node;
}
